--- a/_data/quotes.yml
+++ b/_data/quotes.yml
@@ -360,7 +360,7 @@
   qcontext: "pre-departure speech for the 28th and 29th ASEAN Summits in Laos"
   qdate:
 
-- qtext: "We have long been a republic. I DO NOT, I said, I DO NOT kneel down before anybody else except the Filipino in Quiapo walking in misery and in extreme poverty and hunger."
+- qtext: "We have long been a republic. I do not, I said, I DO NOT kneel down before anybody else except the Filipino in Quiapo walking in misery and in extreme poverty and hunger."
   qauthor: "Rodrigo Roa Duterte"
   qcontext: "pre-departure speech for the 28th and 29th ASEAN Summits in Laos"
   qdate:
