Update image source

--- a/_config.yaml
+++ b/_config.yaml
@@ -75,7 +75,7 @@ title:          "Duterte Times"
 tagline:        "The times, they are a-changin'"
 description:    "Philippine alternative social news website"
 url:            https://dutertetimes.github.io
-image_source:   https://dl.dropboxusercontent.com/u/47611946/dutertetimes
+image_source:   https://dl.dropboxusercontent.com
 
 fb_app_id:      167022237037290
 fb_admins:      167022237037290
