Update twitter card image

--- a/_data/images.yml
+++ b/_data/images.yml
@@ -1,3 +1,4 @@
+twitter_card_small: /s/fowu27wxx28ya96/twitter_summary_card_02.png
 default: /s/ppztwqqz2v4v0kz/post_16_9_default.png
 agrarian: /s/008ajr53yv3sdw6/post_16_9_agrarian.png
 crime: /s/yvaw2vvhg8b4y19/post_16_9_crime.png
