--- a/_data/quotes.yml
+++ b/_data/quotes.yml
@@ -454,3 +454,8 @@
   qauthor: "Rodrigo Roa Duterte"
   qcontext: ""
   qdate:
+  
+- qtext: "My administration will begin and end in the altar of public interst."
+  qauthor: "Rodrigo Roa Duterte"
+  qcontext:
+  qdate: "12 March 2017"
