Add thumbnail image reference

--- a/_data/images.yml
+++ b/_data/images.yml
@@ -16,6 +16,7 @@ thumbnail_gov_dost_fortunato_de_la_pena.png: /s/90g5gxqrd8plaib/thumbnail_gov_do
 thumbnail_gov_executive_da_sec_manny_pinol_00.png: /s/8a0my8tjlvrqlry/thumbnail_gov_executive_da_sec_manny_pinol_00.png
 thumbnail_gov_executive_doe_usec_felix_william_fuentebella_00.png: /s/ntebws9gtsfckg6/thumbnail_gov_executive_doe_usec_felix_william_fuentebella_00.png
 thumbnail_gov_executive_dswd_sec_judy_taguiwalo_00.png: /s/guy73rnnsqy4hfl/thumbnail_gov_executive_dswd_sec_judy_taguiwalo_00.png
+thumbnail_gov_executive_president_duterte_00.png: /s/m7u7uwi9g036b81/thumbnail_gov_executive_president_duterte_00.png
 thumbnail_gov_executive_president_duterte_public_informal_interview_00.png: /s/q7yy1zgvpf5npl8/thumbnail_gov_executive_president_duterte_public_informal_interview_00.png
 thumbnail_gov_executive_president_duterte_statement_00.png: /s/lava7wqs3qt93nd/thumbnail_gov_executive_president_duterte_statement_00.png
 thumbnail_gov_house_of_representatives_00.png: /s/sic8d2nt94iaoem/thumbnail_gov_house_of_representatives_00.png
