Correct spelling in quotes

--- a/_data/quotes.yml
+++ b/_data/quotes.yml
@@ -474,7 +474,7 @@
   qcontext: ""
   qdate:
   
-- qtext: "My administration will begin and end in the altar of public interst."
+- qtext: "My administration will begin and end in the altar of public interest."
   qauthor: "Rodrigo Roa Duterte"
   qcontext:
   qdate: "12 March 2017"
